axis for charts changes of bar heights fix middlle vertical align and more. Issue about deviation line not fixed

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -51,3 +51,10 @@
     padding-left: 30px;
     padding-top: 8.5vh;
 }
+
+svg .label.chart {
+    /*visibility: hidden;*/
+}
+svg .label.chart:hover {
+    visibility: visible;
+}
